--- a/ApiSimulation/Views/Admin/List.cshtml
+++ b/ApiSimulation/Views/Admin/List.cshtml
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width" />
     <title>List</title>
 
-  
+
     <!--#region Fontawesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
     <!-- #endregion -->
     <!--#region Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">    
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- #endregion -->
     <!-- #region External -->
     <script src="~/Scripts/Dist/external.js"></script>
@@ -22,98 +22,6 @@
     <!-- #region Internal -->
     <script src="~/Scripts/Dist/internal.js"></script>
     <!-- #endregion -->
-
-
-    <script>
-/*
-            $(function ()
-            {
-                //$('[data-toggle="tooltip"]').tooltip();
-                //$('[data-toggle="dropdown"]').dropdown();
-
-                // ilk adım modeli observeble hale getirdik.
-                viewModel = ko.viewmodel.fromModel(sendingData);
-                ko.applyBindings(viewmModel);
-
-                setTimeout(function ()
-                {
-                    // observeble model üzerinde kayıt değiştirdik
-                    viewModel()[2].url("deneme url text");
-
-                    // observeble olan viewmodel deki son değişiklikleri sendingModel üzerine aldık.
-                    sendingModel = ko.viewmodel.toModel(viewModel)
-
-
-                    // observeble olmayan dataya dışarıdan yeni bişeyler ekleyip
-                    sendingData[1].detail.push(
-                                                  {
-                                                      id: 11,
-                                                      contentType: "xxx/yyy",
-                                                      contentRaw: "xxxxx",
-                                                      hit: 2323
-                                                  });
-                    // bu değişikliği bunu observeble modelimize aktardık.
-                    ko.viewmodel.updateFromModel(viewModel, sendingData);
-
-
-                }, 3000);
-
-
-
-
-
-            });
-
-            var viewmModel;
-
-            var sendingData = [
-                    {
-                        id: 1,
-                        url: "http://aaaaa",
-                        delay: 300,
-                        hit: 123,
-                        detail:
-                              [
-                                {
-                                    id: 3,
-                                    contentType: "aa1/aa1",
-                                    contentRaw: "aaaaa1",
-                                    hit: 543
-                                },
-                                {
-                                    id: 5,
-                                    contentType: "aa2/aa2",
-                                    contentRaw: "aaaaa2",
-                                    hit: 543
-                                }
-                              ]
-                    },
-                    {
-                        id: 2,
-                        url: "http://bbbb",
-                        delay: 200,
-                        hit: 234,
-                        detail:
-                              [
-                                {
-                                    id: 9,
-                                    contentType: "bb/bb",
-                                    contentRaw: "bbbbbb",
-                                    hit: 432
-                                }
-                              ]
-                    },
-                    {
-                        id: 3,
-                        url: "http://ccccc",
-                        delay: 100,
-                        hit: 345,
-                        detail: []
-                    }
-            ];
-*/
-    </script>
-
     <!-- #region template -->
 
     <script type="text/html" id="response-template">
@@ -121,34 +29,71 @@
 
         <div class="panel panel-success" data-bind="attr: { 'data-id': ID }">
             <div class="panel-heading">
-                <div class="row">
-                    <div class="col-md-8">
-                        <strong>Url: </strong><span data-bind="text: Url"></span><input type="text" data-bind="value:Url" />
+                <div data-bind="if: !IsEditing()">
+
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <strong>Url: </strong><span data-bind="text: Url"></span>
+                        </div>
+
+                        <div class="col-sm-3">
+                            <strong>Hit: </strong><span data-bind="text: Hit"></span>
+                        </div>
+                        <div class="col-sm-2 text-right">
+
+                            <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
+
+                            <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Detay ekle" data-bind="click: $parent.AddNewDetail">
+                                <i class="fa fa-plus"></i>
+                            </button>
+
+                            <button class="btn btn-warning btn-xs" type="button" data-toggle="tooltip" title="Detayı göster" data-bind="click: $parent.LoadDetail, visible: Items().length == 0">
+                                <i class="fa fa-cloud-download"></i>
+                            </button>
+
+                            <button class="btn btn-info btn-xs" type="button" data-toggle="tooltip" title="Düzenle" data-bind="click: $parent.Edit">
+                                <i class="fa fa-pencil"></i>
+                            </button>
+
+                            <button class="btn btn-danger btn-xs" type="button" data-toggle="dropdown" title="Sil">
+                                <i class="fa fa-close"></i>
+                            </button>
+                            <ul class="dropdown-menu pull-right">
+                                <li><a href="about:blank" data-bind="click: $parent.Delete"><i class="fa fa-close"></i> İçeriği Sil</a></li>
+                            </ul>
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div data-bind="if: IsEditing()">
+
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group"><label>Url: </label><input class="form-control input-sm" data-bind="value: Url" type="text" placeholder="endpoint giriniz.." /></div>
+                        </div>
+
+                        <div class="col-sm-3">
+                            <div class="form-group"><label>Hit: </label><input class="form-control input-sm" data-bind="value: Hit" type="number" /></div>
+                        </div>
+                        <div class="col-sm-2 text-right">
+
+                            <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
+
+                            <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Kaydet" data-bind="click: $parent.Save">
+                                <i class="fa fa-check"></i>
+                            </button>
+
+                            <button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="click: $parent.Cancel">
+                                <i class="fa fa-close"></i>
+                            </button>
+
+                        </div>
                     </div>
 
-                    <div class="col-sm-2">
-                        <strong>Hit: </strong><span data-bind="text: Hit"></span>
-                    </div>
-                    <div class="col-sm-2 text-right">
-
-                        <button class="btn btn-warning btn-xs" type="button" data-toggle="tooltip" title="Detayı göster">
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-
-
-                        <button class="btn btn-info btn-xs" type="button" data-toggle="tooltip" title="Düzenle">
-                            <i class="fa fa-pencil"></i>
-                        </button>
-
-                        <button class="btn btn-danger btn-xs" type="button" data-toggle="dropdown" title="Sil">
-                            <i class="fa fa-close"></i>
-                        </button>
-                        <ul class="dropdown-menu pull-right">
-                            <li><a href="#"><i class="fa fa-close"></i> İçeriği Sil</a></li>
-                        </ul>
-
-
-                    </div>
                 </div>
             </div>
 
@@ -162,15 +107,67 @@
     <!--//////////////////////////////-->
 
     <script type="text/html" id="response-detail-template">
-        <div>
+        <div data-bind="if: !IsEditing()">
             <div class="row">
-                <div class="col-sm-2"><strong>Hit: </strong><span data-bind="text: Hit"></span></div>
-                <div class="col-sm-2"><strong>Delay: </strong><span data-bind="text: Delay"></span></div>
-                <div class="col-md-8"><strong>Content Type: </strong><span data-bind="text: ContentType"></span></div>
                 <div class="col-lg-12">
                     <pre data-bind="text: ContentRaw"></pre>
                 </div>
+                <div class="col-sm-3"><strong>Hit: </strong><span data-bind="text: Hit"></span></div>
+                <div class="col-sm-3"><strong>Delay: </strong><span data-bind="text: Delay"></span></div>
+                <div class="col-md-5"><strong>Content Type: </strong><span data-bind="text: ContentType"></span></div>
+                <div class="col-md-1 text-right">
+
+                    <div class="form-group">
+
+                        <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
+
+                        <button class="btn btn-info btn-xs" type="button" data-toggle="tooltip" title="Düzenle" data-bind="click: $root.EditDetail">
+                            <i class="fa fa-pencil"></i>
+                        </button>
+
+                        <button class="btn btn-danger btn-xs" type="button" data-toggle="dropdown" title="Sil">
+                            <i class="fa fa-close"></i>
+                        </button>
+                        <ul class="dropdown-menu pull-right">
+                            <li><a href="about:blank" data-bind="click: $root.DeleteDetail"><i class="fa fa-close"></i> İçeriği Sil</a></li>
+                        </ul>
+
+
+                    </div>
+                </div>
+
+
             </div>
+            <hr />
+        </div>
+        <div data-bind="if: IsEditing()">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="form-group">
+                        <textarea class="form-control" data-bind="value: ContentRaw" rows="3"></textarea>
+                    </div>
+                </div>
+                <div class="col-sm-3"><div class="form-group"><label>Hit: </label><input class="form-control input-sm" data-bind="value: Hit" type="number" /></div></div>
+                <div class="col-sm-3"><div class="form-group"><label>Delay: </label><input class="form-control input-sm" data-bind="value: Delay" type="number" /></div></div>
+                <div class="col-md-5"><div class="form-group"><label>Content Type: </label><select class="form-control input-sm" data-bind="options: ContentTypesConstant, value: ContentType, optionsCaption:'Seçiniz...'"></select></div></div>
+                <div class="col-sm-1 text-right">
+                    <div class="form-group">
+
+                        <i class="fa fa-refresh  fa-spin" data-bind="visible: InProgress"></i>
+
+                        <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Kaydet" data-bind="click: $root.SaveDetail">
+                            <i class="fa fa-check"></i>
+                        </button>
+
+                        <button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="click: $root.CancelDetail">
+                            <i class="fa fa-close"></i>
+                        </button>
+                    </div>
+                </div>
+
+
+            </div>
+            <hr />
         </div>
     </script>
 
@@ -186,7 +183,7 @@
             <h1>Api Simulator</h1>
             <p>Uygulama yaşam döngüsü içerisinde sunucu katmanında bulunan servisler tarafından gerçekleştirecek operasyonları simüle etmek için oluşturulmuştur.</p>
             <p>
-                <button class="btn btn-warning btn-lg" role="button">
+                <button class="btn btn-warning btn-lg" role="button" id="btn-new-operation">
                     <i class="fa fa-plus-square-o"></i>
                     Yeni Operasyon Ekle
                 </button>
