--- a/ApiSimulation/Views/Admin/List.cshtml
+++ b/ApiSimulation/Views/Admin/List.cshtml
@@ -6,21 +6,20 @@
 
 <html>
 <head>
+
+    <link rel="shortcut icon" href="/favicon.ico">
+
+
     <meta name="viewport" content="width=device-width" />
-    <title>List</title>
+    <title>Api Simulator</title>
 
-
-    <!--#region Fontawesome -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
-    <!-- #endregion -->
-    <!--#region Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <!-- #endregion -->
     <!-- #region External -->
     <script src="~/Scripts/Dist/external.js"></script>
+    <link href="~/Styles/Dist/external.css" rel="stylesheet" />
     <!-- #endregion -->
     <!-- #region Internal -->
     <script src="~/Scripts/Dist/internal.js"></script>
+    <link href="~/Styles/Dist/internal.css" rel="stylesheet" />
     <!-- #endregion -->
     <!-- #region template -->
 
@@ -33,11 +32,13 @@
 
 
                     <div class="row">
-                        <div class="col-md-7">
+                        <div class="col-md-6">
                             <strong>Url: </strong><span data-bind="text: Url"></span>
                         </div>
-
-                        <div class="col-sm-3">
+                        <div class="col-md-3">
+                            <strong>Last: </strong><span data-bind="text: moment(LastRequestDate).format('DD.MM.YYYY HH:mm:ss')"></span>
+                        </div>
+                        <div class="col-sm-1">
                             <strong>Hit: </strong><span data-bind="text: Hit"></span>
                         </div>
                         <div class="col-sm-2 text-right">
@@ -72,13 +73,10 @@
 
 
                     <div class="row">
-                        <div class="col-md-7">
-                            <div class="form-group"><label>Url: </label><input class="form-control input-sm" data-bind="value: Url" type="text" placeholder="endpoint giriniz.." /></div>
+                        <div class="col-md-10">
+                            <div class="form-group"><label>Url: </label><input class="form-control input-sm" data-bind="value: Url" type="text" placeholder="endpoint giriniz.." required /></div>
                         </div>
 
-                        <div class="col-sm-3">
-                            <div class="form-group"><label>Hit: </label><input class="form-control input-sm" data-bind="value: Hit" type="number" /></div>
-                        </div>
                         <div class="col-sm-2 text-right">
 
                             <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
@@ -87,9 +85,9 @@
                                 <i class="fa fa-check"></i>
                             </button>
 
-                            <button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="click: $parent.Cancel">
+                            @*<button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="click: $parent.Cancel">
                                 <i class="fa fa-close"></i>
-                            </button>
+                            </button>*@
 
                         </div>
                     </div>
@@ -112,9 +110,9 @@
                 <div class="col-lg-12">
                     <pre data-bind="text: ContentRaw"></pre>
                 </div>
-                <div class="col-sm-3"><strong>Hit: </strong><span data-bind="text: Hit"></span></div>
                 <div class="col-sm-3"><strong>Delay: </strong><span data-bind="text: Delay"></span></div>
                 <div class="col-md-5"><strong>Content Type: </strong><span data-bind="text: ContentType"></span></div>
+                <div class="col-sm-3"><strong>Hit: </strong><span data-bind="text: Hit"></span></div>
                 <div class="col-md-1 text-right">
 
                     <div class="form-group">
@@ -144,24 +142,24 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <textarea class="form-control" data-bind="value: ContentRaw" rows="3"></textarea>
+                        <textarea class="form-control" data-bind="value: ContentRaw" rows="7" required></textarea>
                     </div>
                 </div>
-                <div class="col-sm-3"><div class="form-group"><label>Hit: </label><input class="form-control input-sm" data-bind="value: Hit" type="number" /></div></div>
-                <div class="col-sm-3"><div class="form-group"><label>Delay: </label><input class="form-control input-sm" data-bind="value: Delay" type="number" /></div></div>
-                <div class="col-md-5"><div class="form-group"><label>Content Type: </label><select class="form-control input-sm" data-bind="options: ContentTypesConstant, value: ContentType, optionsCaption:'Seçiniz...'"></select></div></div>
-                <div class="col-sm-1 text-right">
+                <div class="col-sm-3"><div class="form-group"><label>Delay: </label><input class="form-control input-sm" data-bind="value: Delay" type="number" required /></div></div>
+                <div class="col-md-4"><div class="form-group"><label>Content Type: </label><select class="form-control input-sm" data-bind="options: ContentTypeConstant.AllowedContentTypes, value: ContentType, optionsCaption:'Seçiniz...'" required></select></div></div>
+                <div class="col-md-3"><div class="form-group"><label>Base64 Converter: </label><input class="form-control" type="file" accept="image/*,application/pdf" data-bind="event: { change: function() { viewModel.SelectFile($data, $element.files[0]) } }" /></div></div>
+                <div class="col-sm-2 text-right">
                     <div class="form-group">
 
-                        <i class="fa fa-refresh  fa-spin" data-bind="visible: InProgress"></i>
+                        <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
 
                         <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Kaydet" data-bind="click: $root.SaveDetail">
                             <i class="fa fa-check"></i>
                         </button>
 
-                        <button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="click: $root.CancelDetail">
+                        @*<button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="click: $root.CancelDetail">
                             <i class="fa fa-close"></i>
-                        </button>
+                        </button>*@
                     </div>
                 </div>
 
@@ -170,8 +168,6 @@
             <hr />
         </div>
     </script>
-
-
 
     <!-- #endregion -->
 
@@ -192,7 +188,7 @@
     </div>
     <div class="container">
         <div class="page-header">
-            <h1>Operasyonlar <small>Tüm operasyonlar ve detayları</small></h1>
+            <h1>Operasyonlar <small><span>Tüm operasyonlar ve detayları</span> <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i> </small></h1>
         </div>
         <div data-bind="template: { name: 'response-template', foreach: Items }"></div>
     </div>
