--- a/ApiSimulation/Styles/Common/Common.css
+++ b/ApiSimulation/Styles/Common/Common.css
@@ -5,13 +5,52 @@
 
 body
 {
-    padding-bottom: 300px;
+    padding-bottom: 200px;
 }
 
 footer
 {
-    padding-top: 15px;    
-    margin-top: 45px;    
+    padding-top: 15px;
+    margin-top: 45px;
     color: #777;
     border-top: 1px solid #e5e5e5;
 }
+
+.favicon
+{
+    height: 25px;
+}
+
+.navbar-static-top
+{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+section
+{
+    padding-top: 40px;
+}
+
+.jumbotron
+{
+    margin-top: 15px;
+    margin-bottom: -15px;
+}
+
+.api-active-tab
+{
+    color: #555;
+    cursor: default;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+    .api-active-tab > a
+    {
+        background-color: white !important;
+    }
