--- a/ApiSimulation/Views/Admin/List.cshtml
+++ b/ApiSimulation/Views/Admin/List.cshtml
@@ -9,7 +9,6 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
 
-
     <meta name="viewport" content="width=device-width" />
     <title>Api Simulator</title>
 
@@ -21,264 +20,71 @@
     <script src="~/Scripts/Dist/internal.js"></script>
     <link href="~/Styles/Dist/internal.css" rel="stylesheet" />
     <!-- #endregion -->
-    <!-- #region template -->
+    @Html.Partial("~/Views/Partial/_AdminTemplate.cshtml")
+</head>
+<body data-spy="scroll">
 
-    <script type="text/html" id="response-template">
-     <div data-bind="if: Category() == $root.SelectedCategory() || Category() == '' ">
-        <div class="panel panel-success" data-bind="attr: { 'data-id': ID }">
-            <div class="panel-heading">
-                <div data-bind="if: !IsEditing()">
-
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <strong>Url: </strong><a href="" target="_blank" data-bind="text:UrlDisplay , attr:{href:UrlDisplay}"></a>
-                        </div>
-                        <div class="col-md-3">
-                            <strong>Last: </strong><span data-bind="text: moment(LastRequestDate).format('DD.MM.YYYY HH:mm:ss')"></span>
-                        </div>
-                        <div class="col-sm-1">
-                            <strong>Hit: </strong><span data-bind="text: Hit"></span>
-                        </div>
-                        <div class="col-sm-2 text-right">
-
-                            <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
-
-                            <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Detay ekle" data-bind="click: $parent.AddNewDetail">
-                                <i class="fa fa-plus"></i>
-                            </button>
-
-                            <button class="btn btn-warning btn-xs" type="button" data-toggle="tooltip" title="Detayı göster" data-bind="click: $parent.LoadDetails, visible: Items().length == 0">
-                                <i class="fa fa-cloud-download"></i>
-                            </button>
-
-                            <button class="btn btn-info btn-xs" type="button" data-toggle="tooltip" title="Düzenle" data-bind="click: $parent.Edit">
-                                <i class="fa fa-pencil"></i>
-                            </button>
-
-                            <button class="btn btn-danger btn-xs" type="button" data-toggle="dropdown" title="Sil">
-                                <i class="fa fa-close"></i>
-                            </button>
-                            <ul class="dropdown-menu pull-right">
-                                <li><a href="about:blank" data-bind="click: $parent.Delete"><i class="fa fa-close"></i> İçeriği Sil</a></li>
-                            </ul>
-
-
-                        </div>
-                    </div>
-                </div>
-
-                <div data-bind="if: IsEditing()">
-
-
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="form-group"><label>Url: </label><input class="form-control input-sm" data-bind="value: Url" type="text" placeholder="EndPoint giriniz.." required /></div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group"><label>Category: </label><input class="form-control input-sm" data-bind="value: Category" type="text" placeholder="Kategori giriniz.." required /></div>
-                        </div>
-                        <div class="col-sm-2 text-right">
-
-                            <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
-
-                            <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Kaydet" data-bind="click: $parent.Save">
-                                <i class="fa fa-check"></i>
-                            </button>
-
-                            <button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="click: $parent.Cancel">
-                                <i class="fa fa-close"></i>
-                            </button>
-
-                        </div>
-                    </div>
-
-                </div>
+    <!-- #region navbar -->
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span><link href="~/Styles/Common/Common.css" rel="stylesheet" />
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="."><img src="/favicon.png" class="favicon" /></a>
             </div>
-
-            <div class="panel-body" data-bind="visible: Items().length > 0, template:{name:'response-detail-template', foreach:Items}"></div>
-        </div>
-</div>
-
-    </script>
-
-
-    <!--//////////////////////////////-->
-
-    <script type="text/html" id="response-detail-template">
-        <div data-bind="if: !IsEditing()">
-            <div class="row">
-                <div class="col-lg-12">
-                    <pre data-bind="text: ContentRaw"></pre>
-                </div>
-                <div class="col-sm-3"><strong>Delay: </strong><span data-bind="text: Delay"></span></div>
-                <div class="col-md-5"><strong>Content Type: </strong><span data-bind="text: ContentType"></span></div>
-                <div class="col-sm-3"><strong>Hit: </strong><span data-bind="text: Hit"></span></div>
-                <div class="col-md-1 text-right">
-
-                    <div class="form-group">
-
-                        <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
-
-                        <button class="btn btn-info btn-xs" type="button" data-toggle="tooltip" title="Düzenle" data-bind="click: $root.EditDetail">
-                            <i class="fa fa-pencil"></i>
-                        </button>
-
-                        <button class="btn btn-danger btn-xs" type="button" data-toggle="dropdown" title="Sil">
-                            <i class="fa fa-close"></i>
-                        </button>
-                        <ul class="dropdown-menu pull-right">
-                            <li><a href="about:blank" data-bind="event: { click: function() { $root.DeleteDetail($parent,$data) } }"><i class="fa fa-close"></i> İçeriği Sil</a></li>
-                        </ul>
-
-
-                    </div>
-                </div>
-
-
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#operations">Operasyonlar</a></li>
+                    <li><a href="#how-to-use">Nasıl Kullanırım?</a></li>
+                    <li><a href="#template-engine">Template Engine</a></li>
+                </ul>
             </div>
-            <hr />
         </div>
-        <div data-bind="if: IsEditing()">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="form-group">
-                        <textarea class="form-control" data-bind="value: ContentRaw" rows="7" required></textarea>
-                    </div>
-                </div>
-                <div class="col-sm-3"><div class="form-group"><label>Delay: </label><input class="form-control input-sm" data-bind="value: Delay" type="number" required /></div></div>
-                <div class="col-md-4"><div class="form-group"><label>Content Type: </label><select class="form-control input-sm" data-bind="options: Commons.Constants.ContentTypeConstant.AllowedContentTypes, value: ContentType, optionsCaption:'Seçiniz...'" required></select></div></div>
-                <div class="col-md-3"><div class="form-group"><label>Base64 Converter: </label><input class="form-control" type="file" accept="image/*,application/pdf" data-bind="event: { change: function() { viewModel.SelectFile($data, $element.files[0]) } }" /></div></div>
-                <div class="col-sm-2 text-right">
-                    <div class="form-group">
-
-                        <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i>
-
-                        <button class="btn btn-success btn-xs" type="button" data-toggle="tooltip" title="Kaydet" data-bind="click: $root.SaveDetail">
-                            <i class="fa fa-check"></i>
-                        </button>
-
-                        <button class="btn btn-danger btn-xs" type="button" data-toggle="tooltip" title="İptal" data-bind="event: { click: function() { $root.CancelDetail($parent,$data) } }">
-                            <i class="fa fa-close"></i>
-                        </button>
-                    </div>
-                </div>
-
-
-            </div>
-            <hr />
-        </div>
-    </script>
-
+    </nav>
     <!-- #endregion -->
 
 
-</head>
-<body>
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Api Simulator</h1>
-            <p>
-                Uygulama yaşam döngüsü içerisinde sunucu katmanında bulunan servisler tarafından gerçekleştirecek operasyonları simüle etmek için oluşturulmuştur.
-            </p>
-            <p>
-                <button class="btn btn-warning btn-lg" role="button" id="btn-new-operation">
-                    <i class="fa fa-plus-square-o"></i>
-                    Yeni Operasyon Ekle
-                </button>
-            </p>
+
+    <section id="first">
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Api Simulator</h1>
+                <p>
+                    Uygulama yaşam döngüsü içerisinde sunucu katmanında bulunan servisler tarafından gerçekleştirecek operasyonları simüle etmek için oluşturulmuştur.
+                </p>
+                <p>
+                    <button class="btn btn-warning btn-lg" role="button" id="btn-new-operation">
+                        <i class="fa fa-plus-square-o"></i>
+                        Yeni Operasyon Ekle
+                    </button>
+                </p>
+            </div>
         </div>
-    </div>
+    </section>
     <div class="container">
-        <div class="page-header">
-            <h1>Operasyonlar <small><span>Tüm operasyonlar ve detayları</span> <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i> </small></h1>
-        </div>
 
-        <ul class="nav nav-tabs" data-bind="foreach:Categories">
-            <li role="presentation" class="deneme" data-bind="css: {'active': $data == $root.SelectedCategory() }">
-                <a href="about:blank" data-bind="text: $data, click: $root.SelectedCategory"></a>
-                </li>          
-        </ul>
-        <br />
+        <section id="operations">
+            <div class="page-header">
+                <h1>Operasyonlar <small><span>Tüm operasyonlar ve detayları</span> <i class="fa fa-refresh fa-spin" data-bind="visible: InProgress"></i> </small></h1>
+            </div>
 
-        <div data-bind="template: { name: 'response-template', foreach: Items }"></div>
+            <ul class="nav nav-tabs" data-bind="foreach:Categories">
+                <li role="presentation" class="deneme" data-bind="css: {'api-active-tab': $data == $root.SelectedCategory()}">
+                    <a href="javascript:void(0)" data-bind="text: $data, click: $root.SelectedCategory"></a>
+                </li>
+            </ul>
+            <br />
 
-        <div class="page-header">
-            <h1>Template Engine <small><span>Tüm detaylı işlemler</span></small></h1>
-        </div>
-        <p>
-            Template engine kullanarak temel programlama işlemlerini gerçekleştirebiliriz. Örneğin bir <code>for</code> döngüsü kurabilir veya <code>if</code> yapıları ile dönmesini istediğimiz datayı istediğimiz koşula göre biçimlendirebiliriz.
-            <h2>Temel</h2>
-            Template kodlarımız <code>@@</code> ile başlamalıdır, Kod bloklarımız oluşturmak için <code>@@{ }</code> kullanılır, Yorum satrı haline getirmek için <code>@@* benim yorumum *@@</code> kullanılır.<br />
-            Kod bloğundan çıkmak için <code>&lt;text&gt; template dışı kodlar &lt;/text&gt;</code> kullanılır.<br />
-            Gönderdiğimizi Http isteğinin tüm detaylarını barındıran <code>HttpContext</code> nesnesi <code>@@Model.</code> şeklinde kullanılabilir.
-        </p>
+            <div data-bind="template: { name: 'response-template', foreach: Items }"></div>
+        </section>
 
+        @Html.Partial("~/Views/Partial/_AdminHowToUse.cshtml")
 
-
-        <h2>Örnek kodlar</h2>
-
-        <p>Birden çok model oluşturmak</p>
-<pre>
-[
-   @@for(var i = 0; i < 10; i++)
-    {
-       &lt;text&gt;
-       { "SimpleProp":"value" } 
-       &lt;/text&gt;
-    }
-]
-</pre>
-
-        <p>Post edilen parametreye göre model şekillendirmek</p>
-<pre>
-@@if(Model.Request.Form["paramName"] != null)
-{
-    &lt;text&gt;
-    "VisibleParameter":"Value"
-    &lt;/text&gt;
-}
-</pre>
-
-        <p>Post parametreleri kullanmak</p>
-<pre>
-{
-    "AllParameters":"@@Model.Request.Form",
-    "SpecificParameter":"@@Model.Request.Form["paramName"]"
-}
-</pre>
-
-        <p>Get parametreleri kullanmak</p>
-<pre>
-{
-    "AllParameters":"@@Model.Request.QueryString",
-    "SpecificParameter":"@@Model.Request.QueryString["paramName"]"
-}
-</pre>
-
-        <p>Şimdiki zaman bilgisi</p>
-<pre>
-{
-    "ChangeDate":"@@DateTime.Now.ToString("dd.MM.yyyy")"
-}
-</pre>
-        <p>Alınabilecek temel bilgiler</p>
-<pre>
-{
-"UserAgent":"@@Model.Request.UserAgent",
-"IP":"@@Model.Request.UserHostAddress;",
-"Client":"@@Model.Request.Browser.Browser",
-"Platform":"@@Model.Request.Browser.Platform",
-"ClientVersion":"@@Model.Request.Browser.Version",
-"RequestMethod":"@@Model.Request.HttpMethod",
-}
-</pre>
-        <p>Rastgele metin üretmek <code>LoremIpsum(int minWords, int maxWords, int minSentences, int maxSentences)</code></p>
-<pre>
-{
-   "RandomText:"@@ApiSimulation.Helpers.LoremIpsumHelper.LoremIpsum(4,4,3,3)"
-}
-</pre>
+        @Html.Partial("~/Views/Partial/_AdminTemplateEngine.cshtml")
 
         <footer>
             <p>© 2016 Piri Medya A.Ş.</p>
