--- a/ApiSimulation/Views/Partial/_AdminTemplateEngine.cshtml
+++ b/ApiSimulation/Views/Partial/_AdminTemplateEngine.cshtml
@@ -76,4 +76,11 @@
    "RandomText:"@@ApiSimulation.Helpers.LoremIpsumHelper.LoremIpsum(4,4,3,3)"
 }
 </pre>
+    <p><strong>HttpStatusCode ataması yapmak</strong></p>
+<pre>
+@@{
+    Model.Response.StatusCode = 403;
+}
+</pre>
+
 </section>
