--- a/ApiSimulation/Views/Admin/List.cshtml
+++ b/ApiSimulation/Views/Admin/List.cshtml
@@ -90,5 +90,23 @@
             <p>© 2016 Piri Medya A.Ş.</p>
         </footer>
     </div>
+
+    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="modal-log-detail">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="gridSystemModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <i class="fa fa-refresh fa-spin" id="iframe-loading"></i>
+                    <iframe id="iframe-log-detail" src="" frameborder="0"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
