--- a/ApiSimulation/Views/Admin/List.cshtml
+++ b/ApiSimulation/Views/Admin/List.cshtml
@@ -42,6 +42,9 @@
                     <li><a href="#how-to-use">Nasıl Kullanırım?</a></li>
                     <li><a href="#template-engine">Template Engine</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">@ViewBag.UserName</a></li>                   
+                </ul>
             </div>
         </div>
     </nav>
