--- a/ApiSimulation/Views/Admin/List.cshtml
+++ b/ApiSimulation/Views/Admin/List.cshtml
@@ -41,9 +41,10 @@
                     <li><a href="#operations">Operasyonlar</a></li>
                     <li><a href="#how-to-use">Nasıl Kullanırım?</a></li>
                     <li><a href="#template-engine">Template Engine</a></li>
+                    <li><a href="javascript:PushNotification()">Bildirim Gönder</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">@ViewBag.UserName</a></li>                   
+                    <li><a href="#">@ViewBag.UserName</a></li>
                 </ul>
             </div>
         </div>
@@ -93,21 +94,23 @@
             <p>© 2016 Piri Medya A.Ş.</p>
         </footer>
     </div>
-
-    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="modal-log-detail">
+    <!-- #region log detail modal -->
+    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="modal-global">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="gridSystemModalLabel">Modal title</h4>
+                    <h4 class="modal-title">Modal title</h4>
                 </div>
                 <div class="modal-body">
                     <i class="fa fa-refresh fa-spin" id="iframe-loading"></i>
-                    <iframe id="iframe-log-detail" src="" frameborder="0"></iframe>
+                    <iframe id="iframe-modal" src="" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
     </div>
+    <!-- #endregion -->
+
 
 
 
