--- a/ApiSimulation/Views/Admin/NotificationList.cshtml
+++ b/ApiSimulation/Views/Admin/NotificationList.cshtml
@@ -3,9 +3,18 @@
 <html>
 <head>
     <title>Notification</title>
+    <script src="~/Scripts/Dist/external.js"></script>
+    <link href="~/Styles/Dist/external.css" rel="stylesheet" />
+
 </head>
 <body style="font-family:Arial, Helvetica, sans-serif">
-    @using (Html.BeginForm("NotificationSendAndUpdate", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+   
+    <a href="javascript:parent.location.href='https://onesignal.com/'">OneSignal'e git.</a>
+
+
+    @*
+        
+     @using (Html.BeginForm("NotificationSendAndUpdate", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.LabelFor(model => model.ID)
         <br />
@@ -22,7 +31,7 @@
         @Html.TextBoxFor(model => model.AndroidDeviceToken)
         <hr />
 
-        @Html.LabelFor(model => model.IosSenderCertificate) <b>@Html.LabelFor(model => model.IosSenderCertificateName)</b>
+        @Html.LabelFor(model => model.IosSenderCertificate) <b>@Model.IosSenderCertificateName</b>
         <br />
         <input type="file" name="PostedFile" />
         <hr />
@@ -49,6 +58,7 @@
 
     }
 
+    *@
 
 </body>
 </html>
