websocket documentation added

--- a/ApiSimulation/Views/Admin/List.cshtml
+++ b/ApiSimulation/Views/Admin/List.cshtml
@@ -41,6 +41,7 @@
                     <li><a href="#operations">Operasyonlar</a></li>
                     <li><a href="#how-to-use">Nasıl Kullanırım?</a></li>
                     <li><a href="#template-engine">Template Engine</a></li>
+                    <li><a href="#web-socket">WebSocket</a></li>
                     <li><a href="javascript:PushNotification()">Bildirim Gönder</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -89,6 +90,8 @@
         @Html.Partial("~/Views/Partial/_AdminHowToUse.cshtml")
 
         @Html.Partial("~/Views/Partial/_AdminTemplateEngine.cshtml")
+
+        @Html.Partial("~/Views/Partial/_AdminWebSocket.cshtml")
 
         <footer>
             <p>© 2016 Piri Medya A.Ş.</p>
