Websocket Active Connections

--- a/ApiSimulation/Views/Partial/_AdminWebSocket.cshtml
+++ b/ApiSimulation/Views/Partial/_AdminWebSocket.cshtml
@@ -8,6 +8,16 @@
         </h1>
     </div>
     <div>
+        <h3>Aktif Bağlantılar</h3>
+        <p>
+            <ul id="ws-active-connections">
+                <li>Yok</li>
+            </ul>
+        </p>
+    </div>
+    <br />
+
+    <div>
         <h3>Bağlantı</h3>
         <p>
             Websocket'e bağlantı kurmak için <code>ws://apisimulator.pho.fm/WebSocket/Init</code> adres kullanılır. SSL bağlantısı için <code>wss://</code> protokolü kullanılabilir.
